cartopy/docs/v0.19/_sources/gallery/lines_and_polygons/global_map.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_and_polygons/global_map.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_lines_and_polygons_global_map.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_and_polygons_global_map.py:


Global Map
----------

An example of a simple map that compares Geodetic and Plate Carree lines
between two locations.

.. GENERATED FROM PYTHON SOURCE LINES 9-34



.. image:: /gallery/lines_and_polygons/images/sphx_glr_global_map_001.png
    :alt: global map
    :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt

    import cartopy.crs as ccrs


    def main():
        fig = plt.figure(figsize=(10, 5))
        ax = fig.add_subplot(1, 1, 1, projection=ccrs.Robinson())

        # make the map global rather than have it zoom in to
        # the extents of any plotted data
        ax.set_global()

        ax.stock_img()
        ax.coastlines()

        ax.plot(-0.08, 51.53, 'o', transform=ccrs.PlateCarree())
        ax.plot([-0.08, 132], [51.53, 43.17], transform=ccrs.PlateCarree())
        ax.plot([-0.08, 132], [51.53, 43.17], transform=ccrs.Geodetic())

        plt.show()


    if __name__ == '__main__':
        main()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  2.345 seconds)


.. _sphx_glr_download_gallery_lines_and_polygons_global_map.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: global_map.py <global_map.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: global_map.ipynb <global_map.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
